commit bilingual contents

--- a/docs/visual-basic/misc/bc42014.md
+++ b/docs/visual-basic/misc/bc42014.md
@@ -1,5 +1,5 @@
 ---
-title: "'<baseinterfacename>. ' from ' Implements <derivedinterfacename>' è già implementato dalla classe base '<baseclassname>'. <membername> Prevista nuova implementazione di <type>"
+title: "'<baseinterfacename>.<membername>' da' Implements <derivedinterfacename> ' è già implementato dalla classe base ' <baseclassname> '. Prevista nuova implementazione di <type>"
 ms.date: 07/20/2015
 f1_keywords:
 - bc42014
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC42014
 ms.assetid: 95fff622-5d54-4ec8-90f0-477de1d58687
-ms.openlocfilehash: d02194e58599075e30199349336923002884f2e0
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: dc372df6ce6a550c4add222d7667e640b485067d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660231"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384183"
 ---
-# <a name="baseinterfacenamemembername-from-implements-derivedinterfacename-is-already-implemented-by-the-base-class-baseclassname-re-implementation-of-type-assumed"></a><span data-ttu-id="4e855-103">'\<nomeinterfacciabase >. memberName >' from ' implementa \<nomeinterfacciaderivata >' è già implementato dalla classe base '\<nomeclassebase >'. \<</span><span class="sxs-lookup"><span data-stu-id="4e855-103">'\<baseinterfacename>.\<membername>' from 'implements \<derivedinterfacename>' is already implemented by the base class '\<baseclassname>'.</span></span> <span data-ttu-id="4e855-104">Si presuppone una nuova \<implementazione di tipo ></span><span class="sxs-lookup"><span data-stu-id="4e855-104">Re-implementation of \<type> assumed</span></span>
-<span data-ttu-id="4e855-105">Una proprietà, routine o evento di una classe derivata usa una clausola `Implements` che specifica un membro dell'interfaccia derivata già implementato sull'interfaccia di base nella classe base.</span><span class="sxs-lookup"><span data-stu-id="4e855-105">A property, procedure, or event in a derived class uses an `Implements` clause specifying a derived interface member that is already implemented on the base interface in the base class.</span></span>  
+# <a name="baseinterfacenamemembername-from-implements-derivedinterfacename-is-already-implemented-by-the-base-class-baseclassname-re-implementation-of-type-assumed"></a><span data-ttu-id="2b67f-103">'\<baseinterfacename>.\<membername>' da' Implements \<derivedinterfacename> ' è già implementato dalla classe base ' \<baseclassname> '.</span><span class="sxs-lookup"><span data-stu-id="2b67f-103">'\<baseinterfacename>.\<membername>' from 'implements \<derivedinterfacename>' is already implemented by the base class '\<baseclassname>'.</span></span> <span data-ttu-id="2b67f-104">Prevista nuova implementazione di \<type></span><span class="sxs-lookup"><span data-stu-id="2b67f-104">Re-implementation of \<type> assumed</span></span>
+<span data-ttu-id="2b67f-105">Una proprietà, routine o evento di una classe derivata usa una clausola `Implements` che specifica un membro dell'interfaccia derivata già implementato sull'interfaccia di base nella classe base.</span><span class="sxs-lookup"><span data-stu-id="2b67f-105">A property, procedure, or event in a derived class uses an `Implements` clause specifying a derived interface member that is already implemented on the base interface in the base class.</span></span>  
   
- <span data-ttu-id="4e855-106">Il membro implementato viene definito dall'interfaccia di base ed ereditato dall'interfaccia derivata.</span><span class="sxs-lookup"><span data-stu-id="4e855-106">The member being implemented is defined by the base interface and inherited by the derived interface.</span></span> <span data-ttu-id="4e855-107">L'interfaccia di base viene implementata direttamente dalla classe base.</span><span class="sxs-lookup"><span data-stu-id="4e855-107">The base class directly implements the base interface.</span></span> <span data-ttu-id="4e855-108">L'interfaccia derivata viene implementata dalla classe derivata, che può facilmente non rendersi conto che la classe base ha già implementato il membro.</span><span class="sxs-lookup"><span data-stu-id="4e855-108">The derived class implements the derived interface and can easily miss the fact that the base class has already implemented the member.</span></span>  
+ <span data-ttu-id="2b67f-106">Il membro implementato viene definito dall'interfaccia di base ed ereditato dall'interfaccia derivata.</span><span class="sxs-lookup"><span data-stu-id="2b67f-106">The member being implemented is defined by the base interface and inherited by the derived interface.</span></span> <span data-ttu-id="2b67f-107">L'interfaccia di base viene implementata direttamente dalla classe base.</span><span class="sxs-lookup"><span data-stu-id="2b67f-107">The base class directly implements the base interface.</span></span> <span data-ttu-id="2b67f-108">L'interfaccia derivata viene implementata dalla classe derivata, che può facilmente non rendersi conto che la classe base ha già implementato il membro.</span><span class="sxs-lookup"><span data-stu-id="2b67f-108">The derived class implements the derived interface and can easily miss the fact that the base class has already implemented the member.</span></span>  
   
- <span data-ttu-id="4e855-109">Una classe derivata può reimplementare un membro di interfaccia implementato dalla sua classe base.</span><span class="sxs-lookup"><span data-stu-id="4e855-109">A derived class can reimplement an interface member that is implemented by its base class.</span></span> <span data-ttu-id="4e855-110">Questo non equivale a eseguire l'override dell'implementazione della classe base.</span><span class="sxs-lookup"><span data-stu-id="4e855-110">This is not the same as overriding the base class implementation.</span></span> <span data-ttu-id="4e855-111">Per altre informazioni, vedere [Implements](../../visual-basic/language-reference/statements/implements-clause.md).</span><span class="sxs-lookup"><span data-stu-id="4e855-111">For more information, see [Implements](../../visual-basic/language-reference/statements/implements-clause.md).</span></span>  
+ <span data-ttu-id="2b67f-109">Una classe derivata può reimplementare un membro di interfaccia implementato dalla sua classe base.</span><span class="sxs-lookup"><span data-stu-id="2b67f-109">A derived class can reimplement an interface member that is implemented by its base class.</span></span> <span data-ttu-id="2b67f-110">Questo non equivale a eseguire l'override dell'implementazione della classe base.</span><span class="sxs-lookup"><span data-stu-id="2b67f-110">This is not the same as overriding the base class implementation.</span></span> <span data-ttu-id="2b67f-111">Per altre informazioni, vedere [Implements](../language-reference/statements/implements-clause.md).</span><span class="sxs-lookup"><span data-stu-id="2b67f-111">For more information, see [Implements](../language-reference/statements/implements-clause.md).</span></span>  
   
- <span data-ttu-id="4e855-112">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="4e855-112">By default, this message is a warning.</span></span> <span data-ttu-id="4e855-113">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="4e855-113">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="2b67f-112">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="2b67f-112">By default, this message is a warning.</span></span> <span data-ttu-id="2b67f-113">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="2b67f-113">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="4e855-114">**ID errore:** BC42014</span><span class="sxs-lookup"><span data-stu-id="4e855-114">**Error ID:** BC42014</span></span>  
+ <span data-ttu-id="2b67f-114">**ID errore:** BC42014</span><span class="sxs-lookup"><span data-stu-id="2b67f-114">**Error ID:** BC42014</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4e855-115">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4e855-115">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2b67f-115">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2b67f-115">To correct this error</span></span>  
   
-- <span data-ttu-id="4e855-116">Se si intende reimplementare il membro di interfaccia, non occorre fare nulla.</span><span class="sxs-lookup"><span data-stu-id="4e855-116">If you intend to reimplement the interface member, you do not need to take any action.</span></span> <span data-ttu-id="4e855-117">Il codice della classe derivata accede al membro reimplementato a meno che non si usi la parola chiave [MyBase](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)per accedere all'implementazione della classe di base.</span><span class="sxs-lookup"><span data-stu-id="4e855-117">Code in your derived class accesses the reimplemented member unless you use the [MyBase](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)keyword to access the base class implementation.</span></span>  
+- <span data-ttu-id="2b67f-116">Se si intende reimplementare il membro di interfaccia, non occorre fare nulla.</span><span class="sxs-lookup"><span data-stu-id="2b67f-116">If you intend to reimplement the interface member, you do not need to take any action.</span></span> <span data-ttu-id="2b67f-117">Il codice della classe derivata accede al membro reimplementato a meno che non si usi la parola chiave [MyBase](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)per accedere all'implementazione della classe di base.</span><span class="sxs-lookup"><span data-stu-id="2b67f-117">Code in your derived class accesses the reimplemented member unless you use the [MyBase](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)keyword to access the base class implementation.</span></span>  
   
-- <span data-ttu-id="4e855-118">Se non si intende reimplementare il membro di interfaccia, rimuovere la clausola `Implements` dalla dichiarazione di proprietà, routine o evento.</span><span class="sxs-lookup"><span data-stu-id="4e855-118">If you do not intend to reimplement the interface member, remove the `Implements` clause from the property, procedure, or event declaration.</span></span>  
+- <span data-ttu-id="2b67f-118">Se non si intende reimplementare il membro di interfaccia, rimuovere la clausola `Implements` dalla dichiarazione di proprietà, routine o evento.</span><span class="sxs-lookup"><span data-stu-id="2b67f-118">If you do not intend to reimplement the interface member, remove the `Implements` clause from the property, procedure, or event declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4e855-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4e855-119">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2b67f-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2b67f-119">See also</span></span>
 
-- [<span data-ttu-id="4e855-120">Interfacce</span><span class="sxs-lookup"><span data-stu-id="4e855-120">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="2b67f-120">Interfacce</span><span class="sxs-lookup"><span data-stu-id="2b67f-120">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
