--- a/docs/visual-basic/misc/bc30101.md
+++ b/docs/visual-basic/misc/bc30101.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30101
 ms.assetid: 16a0dc29-3657-4373-b77f-38f3cb80e6c9
-ms.openlocfilehash: 269c7d70d3269d8251ed22bfd61c482bed1caa87
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7d9a77f90148c62fbfef34edee4a914882573b2e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584079"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359426"
 ---
-# <a name="branching-out-of-a-finally-is-not-valid"></a><span data-ttu-id="758ff-102">La creazione di rami all'esterno di 'Finally' non è valida</span><span class="sxs-lookup"><span data-stu-id="758ff-102">Branching out of a 'Finally' is not valid</span></span>
-<span data-ttu-id="758ff-103">Un'istruzione `GoTo` all'interno di un blocco `Finally` crea rami all'esterno del blocco.</span><span class="sxs-lookup"><span data-stu-id="758ff-103">A `GoTo` statement inside a `Finally` block branches outside the block.</span></span> <span data-ttu-id="758ff-104">La creazione di rami all'interno o all'esterno di un blocco `Catch` o `Finally` non è consentita.</span><span class="sxs-lookup"><span data-stu-id="758ff-104">It is not valid to branch into or out of a `Catch` or `Finally` block.</span></span>  
+# <a name="branching-out-of-a-finally-is-not-valid"></a><span data-ttu-id="a5526-102">La creazione di rami all'esterno di 'Finally' non è valida</span><span class="sxs-lookup"><span data-stu-id="a5526-102">Branching out of a 'Finally' is not valid</span></span>
+<span data-ttu-id="a5526-103">Un'istruzione `GoTo` all'interno di un blocco `Finally` crea rami all'esterno del blocco.</span><span class="sxs-lookup"><span data-stu-id="a5526-103">A `GoTo` statement inside a `Finally` block branches outside the block.</span></span> <span data-ttu-id="a5526-104">La creazione di rami all'interno o all'esterno di un blocco `Catch` o `Finally` non è consentita.</span><span class="sxs-lookup"><span data-stu-id="a5526-104">It is not valid to branch into or out of a `Catch` or `Finally` block.</span></span>  
   
- <span data-ttu-id="758ff-105">**ID errore:** BC30101</span><span class="sxs-lookup"><span data-stu-id="758ff-105">**Error ID:** BC30101</span></span>  
+ <span data-ttu-id="a5526-105">**ID errore:** BC30101</span><span class="sxs-lookup"><span data-stu-id="a5526-105">**Error ID:** BC30101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="758ff-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="758ff-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a5526-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a5526-106">To correct this error</span></span>  
   
-- <span data-ttu-id="758ff-107">Rimuovere l'istruzione `GoTo` e provare a implementare la logica di programma con strutture di controllo del ciclo o delle decisioni.</span><span class="sxs-lookup"><span data-stu-id="758ff-107">Remove the `GoTo` statement, and consider implementing the program logic with decision or loop control structures.</span></span>  
+- <span data-ttu-id="a5526-107">Rimuovere l'istruzione `GoTo` e provare a implementare la logica di programma con strutture di controllo del ciclo o delle decisioni.</span><span class="sxs-lookup"><span data-stu-id="a5526-107">Remove the `GoTo` statement, and consider implementing the program logic with decision or loop control structures.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="758ff-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="758ff-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a5526-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a5526-108">See also</span></span>
 
-- [<span data-ttu-id="758ff-109">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="758ff-109">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
-- [<span data-ttu-id="758ff-110">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="758ff-110">GoTo Statement</span></span>](../../visual-basic/language-reference/statements/goto-statement.md)
-- [<span data-ttu-id="758ff-111">Flusso di controllo</span><span class="sxs-lookup"><span data-stu-id="758ff-111">Control Flow</span></span>](../../visual-basic/programming-guide/language-features/control-flow/index.md)
+- [<span data-ttu-id="a5526-109">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="a5526-109">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="a5526-110">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="a5526-110">GoTo Statement</span></span>](../language-reference/statements/goto-statement.md)
+- [<span data-ttu-id="a5526-111">Flusso di controllo</span><span class="sxs-lookup"><span data-stu-id="a5526-111">Control Flow</span></span>](../programming-guide/language-features/control-flow/index.md)
