--- a/docs/visual-basic/misc/bc30622.md
+++ b/docs/visual-basic/misc/bc30622.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30622
 ms.assetid: f5d412ae-3265-4e69-b513-d402730bf575
-ms.openlocfilehash: ff29d34ba5c8538170019aa1f686f4b4f35c6013
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ab172440ad642ff77dc1ec30cf64f5bd349c02c6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646740"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401199"
 ---
-# <a name="end-module-must-be-preceded-by-a-matching-module"></a><span data-ttu-id="f5eac-102">'End Module' deve essere preceduto da un oggetto 'Module' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f5eac-102">'End Module' must be preceded by a matching 'Module'</span></span>
-<span data-ttu-id="f5eac-103">I blocchi del modulo iniziano con un'istruzione `Module` e terminano con un costrutto `End Module` .</span><span class="sxs-lookup"><span data-stu-id="f5eac-103">Module blocks begin with a `Module` statement and end with an `End Module` construct.</span></span>  
+# <a name="end-module-must-be-preceded-by-a-matching-module"></a><span data-ttu-id="e8047-102">'End Module' deve essere preceduto da un oggetto 'Module' corrispondente</span><span class="sxs-lookup"><span data-stu-id="e8047-102">'End Module' must be preceded by a matching 'Module'</span></span>
+<span data-ttu-id="e8047-103">I blocchi del modulo iniziano con un'istruzione `Module` e terminano con un costrutto `End Module` .</span><span class="sxs-lookup"><span data-stu-id="e8047-103">Module blocks begin with a `Module` statement and end with an `End Module` construct.</span></span>  
   
- <span data-ttu-id="f5eac-104">**ID errore:** BC30622</span><span class="sxs-lookup"><span data-stu-id="f5eac-104">**Error ID:** BC30622</span></span>  
+ <span data-ttu-id="e8047-104">**ID errore:** BC30622</span><span class="sxs-lookup"><span data-stu-id="e8047-104">**Error ID:** BC30622</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f5eac-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5eac-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e8047-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e8047-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f5eac-106">Verificare che il blocco del modulo inizi con un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="f5eac-106">Make sure that the module block begins with a `Module` statement.</span></span>  
+- <span data-ttu-id="e8047-106">Verificare che il blocco del modulo inizi con un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="e8047-106">Make sure that the module block begins with a `Module` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f5eac-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5eac-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e8047-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e8047-107">See also</span></span>
 
-- [<span data-ttu-id="f5eac-108">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="f5eac-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="e8047-108">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="e8047-108">Module Statement</span></span>](../language-reference/statements/module-statement.md)
