--- a/docs/visual-basic/misc/bc30681.md
+++ b/docs/visual-basic/misc/bc30681.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30681
 ms.assetid: 05a0402b-da68-4ab8-b6d6-940379bc5973
-ms.openlocfilehash: 0bac181e74a81639147bc6512cc2d00da1888932
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: f2b829f08e39ddd27d6583e35a92acbaae1e0b95
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958743"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414777"
 ---
-# <a name="region-statement-must-end-with-a-matching-end-region"></a><span data-ttu-id="03aef-102">L'istruzione '#Region' deve terminare con un '#End Region' corrispondente</span><span class="sxs-lookup"><span data-stu-id="03aef-102">'#Region' statement must end with a matching '#End Region'</span></span>
-<span data-ttu-id="03aef-103">Usare il `#Region` direttiva per specificare un blocco di codice che è possibile espandere o comprimere durante l'uso della funzionalità di struttura dell'Editor di codice di Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="03aef-103">Use the `#Region` directive to specify a block of code that you can expand or collapse when using the outlining feature of the Visual Studio Code Editor.</span></span> <span data-ttu-id="03aef-104">L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="03aef-104">The start and end of `#Region` statements must be in the same code block.</span></span>  
+# <a name="region-statement-must-end-with-a-matching-end-region"></a><span data-ttu-id="fc7a6-102">L'istruzione '#Region' deve terminare con un '#End Region' corrispondente</span><span class="sxs-lookup"><span data-stu-id="fc7a6-102">'#Region' statement must end with a matching '#End Region'</span></span>
+<span data-ttu-id="fc7a6-103">Usare la `#Region` direttiva per specificare un blocco di codice che è possibile espandere o comprimere quando si usa la funzionalità di struttura dell'Editor Visual Studio Code.</span><span class="sxs-lookup"><span data-stu-id="fc7a6-103">Use the `#Region` directive to specify a block of code that you can expand or collapse when using the outlining feature of the Visual Studio Code Editor.</span></span> <span data-ttu-id="fc7a6-104">L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="fc7a6-104">The start and end of `#Region` statements must be in the same code block.</span></span>  
   
- <span data-ttu-id="03aef-105">**ID errore:** BC30681</span><span class="sxs-lookup"><span data-stu-id="03aef-105">**Error ID:** BC30681</span></span>  
+ <span data-ttu-id="fc7a6-105">**ID errore:** BC30681</span><span class="sxs-lookup"><span data-stu-id="fc7a6-105">**Error ID:** BC30681</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="03aef-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="03aef-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fc7a6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fc7a6-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="03aef-107">Inserire `#End Region` nella posizione appropriata nel codice dopo l'istruzione `#Region` .</span><span class="sxs-lookup"><span data-stu-id="03aef-107">Insert `#End Region` at the appropriate place in the code after the `#Region` statement.</span></span>  
+1. <span data-ttu-id="fc7a6-107">Inserire `#End Region` nella posizione appropriata nel codice dopo l'istruzione `#Region` .</span><span class="sxs-lookup"><span data-stu-id="fc7a6-107">Insert `#End Region` at the appropriate place in the code after the `#Region` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="03aef-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="03aef-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fc7a6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fc7a6-108">See also</span></span>
 
-- [<span data-ttu-id="03aef-109">Direttiva #Region</span><span class="sxs-lookup"><span data-stu-id="03aef-109">#Region Directive</span></span>](../../visual-basic/language-reference/directives/region-directive.md)
+- [<span data-ttu-id="fc7a6-109">#Region (direttiva)</span><span class="sxs-lookup"><span data-stu-id="fc7a6-109">#Region Directive</span></span>](../language-reference/directives/region-directive.md)
