--- a/docs/visual-basic/misc/bc31152.md
+++ b/docs/visual-basic/misc/bc31152.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31152
 ms.assetid: c2fd26c8-56d5-4bc0-86d1-230cf165d8c0
-ms.openlocfilehash: 1b721345d98c9ddb9a76bba7bb3d012a4b978f2f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b622e46ea962337dbbb339b52a7b52ffcd48a47c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591926"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408854"
 ---
-# <a name="xml-namespace-prefix-prefix-is-reserved-for-use-by-xml-and-the-namespace-uri-cannot-be-changed"></a><span data-ttu-id="64e25-102">L'utilizzo del prefisso dello spazio dei nomi XML 'prefix' è riservato a XML. Impossibile modificare l'URI dello spazio dei nomi</span><span class="sxs-lookup"><span data-stu-id="64e25-102">XML namespace prefix 'prefix' is reserved for use by XML and the namespace URI cannot be changed</span></span>
-<span data-ttu-id="64e25-103">Un prefisso dello spazio dei nomi XML riservato, ad esempio `xmlns`, è stato usato in un valore letterale XML.</span><span class="sxs-lookup"><span data-stu-id="64e25-103">A reserved XML namespace prefix, such as `xmlns`, has been used in an XML literal.</span></span>  
+# <a name="xml-namespace-prefix-prefix-is-reserved-for-use-by-xml-and-the-namespace-uri-cannot-be-changed"></a><span data-ttu-id="26a3f-102">L'utilizzo del prefisso dello spazio dei nomi XML 'prefix' è riservato a XML. Impossibile modificare l'URI dello spazio dei nomi</span><span class="sxs-lookup"><span data-stu-id="26a3f-102">XML namespace prefix 'prefix' is reserved for use by XML and the namespace URI cannot be changed</span></span>
+<span data-ttu-id="26a3f-103">Un prefisso dello spazio dei nomi XML riservato, ad esempio `xmlns`, è stato usato in un valore letterale XML.</span><span class="sxs-lookup"><span data-stu-id="26a3f-103">A reserved XML namespace prefix, such as `xmlns`, has been used in an XML literal.</span></span>  
   
- <span data-ttu-id="64e25-104">**ID errore:** BC31152</span><span class="sxs-lookup"><span data-stu-id="64e25-104">**Error ID:** BC31152</span></span>  
+ <span data-ttu-id="26a3f-104">**ID errore:** BC31152</span><span class="sxs-lookup"><span data-stu-id="26a3f-104">**Error ID:** BC31152</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="64e25-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="64e25-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="26a3f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="26a3f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="64e25-106">Modificare il prefisso dello spazio dei nomi XML in un valore non riservato.</span><span class="sxs-lookup"><span data-stu-id="64e25-106">Change the XML namespace prefix to a value that is not reserved.</span></span>  
+- <span data-ttu-id="26a3f-106">Modificare il prefisso dello spazio dei nomi XML in un valore non riservato.</span><span class="sxs-lookup"><span data-stu-id="26a3f-106">Change the XML namespace prefix to a value that is not reserved.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="64e25-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="64e25-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="26a3f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="26a3f-107">See also</span></span>
 
-- [<span data-ttu-id="64e25-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="64e25-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="64e25-109">XML</span><span class="sxs-lookup"><span data-stu-id="64e25-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="26a3f-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="26a3f-108">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="26a3f-109">XML</span><span class="sxs-lookup"><span data-stu-id="26a3f-109">XML</span></span>](../programming-guide/language-features/xml/index.md)
