--- a/docs/visual-basic/misc/bc32024.md
+++ b/docs/visual-basic/misc/bc32024.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32024
 ms.assetid: 73689803-2584-4aaa-bf12-34158f176240
-ms.openlocfilehash: ed3458427da1305ab88a9db13ebbebc1ec60d2e2
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: a59b35a3b9ef20faf143aa7c71f84042ffe7e770
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913181"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407509"
 ---
-# <a name="default-values-cannot-be-supplied-for-parameters-that-are-not-declared-optional"></a><span data-ttu-id="40c1a-102">Impossibile specificare i valori predefiniti per i parametri che non sono dichiarati 'Optional'</span><span class="sxs-lookup"><span data-stu-id="40c1a-102">Default values cannot be supplied for parameters that are not declared 'Optional'</span></span>
-<span data-ttu-id="40c1a-103">Quando si chiama la routine, è necessario specificare gli argomenti obbligatori che non accettano valori predefiniti nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="40c1a-103">Required arguments must be supplied when the procedure is called, and they do not take default values in the declaration.</span></span>  
+# <a name="default-values-cannot-be-supplied-for-parameters-that-are-not-declared-optional"></a><span data-ttu-id="3c992-102">Impossibile specificare i valori predefiniti per i parametri che non sono dichiarati 'Optional'</span><span class="sxs-lookup"><span data-stu-id="3c992-102">Default values cannot be supplied for parameters that are not declared 'Optional'</span></span>
+<span data-ttu-id="3c992-103">Quando si chiama la routine, è necessario specificare gli argomenti obbligatori che non accettano valori predefiniti nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="3c992-103">Required arguments must be supplied when the procedure is called, and they do not take default values in the declaration.</span></span>  
   
- <span data-ttu-id="40c1a-104">**ID errore:** BC32024</span><span class="sxs-lookup"><span data-stu-id="40c1a-104">**Error ID:** BC32024</span></span>  
+ <span data-ttu-id="3c992-104">**ID errore:** BC32024</span><span class="sxs-lookup"><span data-stu-id="3c992-104">**Error ID:** BC32024</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="40c1a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="40c1a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3c992-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3c992-105">To correct this error</span></span>  
   
-- <span data-ttu-id="40c1a-106">Dichiarare l'argomento come `Optional` oppure rimuovere il valore predefinito.</span><span class="sxs-lookup"><span data-stu-id="40c1a-106">Declare the argument to be `Optional` or remove the default value.</span></span>  
+- <span data-ttu-id="3c992-106">Dichiarare l'argomento come `Optional` oppure rimuovere il valore predefinito.</span><span class="sxs-lookup"><span data-stu-id="3c992-106">Declare the argument to be `Optional` or remove the default value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="40c1a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="40c1a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3c992-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3c992-107">See also</span></span>
 
-- [<span data-ttu-id="40c1a-108">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="40c1a-108">Optional Parameters</span></span>](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
-- [<span data-ttu-id="40c1a-109">Optional</span><span class="sxs-lookup"><span data-stu-id="40c1a-109">Optional</span></span>](../../visual-basic/language-reference/modifiers/optional.md)
+- [<span data-ttu-id="3c992-108">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="3c992-108">Optional Parameters</span></span>](../programming-guide/language-features/procedures/optional-parameters.md)
+- [<span data-ttu-id="3c992-109">Facoltativo</span><span class="sxs-lookup"><span data-stu-id="3c992-109">Optional</span></span>](../language-reference/modifiers/optional.md)
