--- a/docs/visual-basic/misc/bc42018.md
+++ b/docs/visual-basic/misc/bc42018.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operandi di tipo Object usati per l'operatore '<operatorsymbol>'; utilizzare l'operatore 'Is' per verificare l'identità dell'oggetto
+title: Operandi di tipo Object usati per l'operatore '<operatorsymbol>'. Usare l'operatore 'Is' per verificare l'identità dell'oggetto
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42018
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC42018
 ms.assetid: 3fc640a7-7dab-4c14-b25d-a5794dbba59d
-ms.openlocfilehash: db1dadeeac5da98d087892e1a7233673e10a400b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 19bfde2defbedac03cc0f85ef00f025f82e8e4b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627211"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384053"
 ---
-# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-is-operator-to-test-object-identity"></a><span data-ttu-id="4d7d0-102">Gli operandi di tipo Object usati per l'operatore '\<simbolooperatore >', usare l'operatore 'Is' per verificare l'identità dell'oggetto</span><span class="sxs-lookup"><span data-stu-id="4d7d0-102">Operands of type Object used for operator '\<operatorsymbol>'; use the 'Is' operator to test object identity</span></span>
-<span data-ttu-id="4d7d0-103">Un'espressione usa l'operatore `=` con uno o entrambi gli operandi dell'operatore di [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="4d7d0-103">An expression uses the `=` with one or both operands of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-is-operator-to-test-object-identity"></a><span data-ttu-id="dd61f-102">Operandi di tipo Object usati per l'operatore '\<operatorsymbol>'. Usare l'operatore 'Is' per verificare l'identità dell'oggetto</span><span class="sxs-lookup"><span data-stu-id="dd61f-102">Operands of type Object used for operator '\<operatorsymbol>'; use the 'Is' operator to test object identity</span></span>
+<span data-ttu-id="dd61f-103">Un'espressione usa l'operatore `=` con uno o entrambi gli operandi dell'operatore di [Object Data Type](../language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="dd61f-103">An expression uses the `=` with one or both operands of the [Object Data Type](../language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="4d7d0-104">Si consiglia di usare l'operatore `Is` o `IsNot` per determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="4d7d0-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="4d7d0-105">Vedere "Confronto di oggetti" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span><span class="sxs-lookup"><span data-stu-id="4d7d0-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
+ <span data-ttu-id="dd61f-104">Si consiglia di usare l'operatore `Is` o `IsNot` per determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="dd61f-104">You should use the `Is` or `IsNot` operator to determine whether two object references refer to the same object instance.</span></span> <span data-ttu-id="dd61f-105">Vedere "Confronto di oggetti" in [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span><span class="sxs-lookup"><span data-stu-id="dd61f-105">See "Comparing Objects" in [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md).</span></span>  
   
- <span data-ttu-id="4d7d0-106">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="4d7d0-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="4d7d0-107">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="4d7d0-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="4d7d0-108">Ad esempio, se si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e si prova a usarlo con l'operatore `=` , il runtime genera <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un tipo di dati appropriato per il confronto di valori.</span><span class="sxs-lookup"><span data-stu-id="4d7d0-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `=` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="4d7d0-109">Anche se entrambi gli operandi restituiscono il tipo <xref:System.Windows.Forms.Form>, l'operazione non riesce perché `=` non è definito per gli operandi <xref:System.Windows.Forms.Form> .</span><span class="sxs-lookup"><span data-stu-id="4d7d0-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `=` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
+ <span data-ttu-id="dd61f-106">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="dd61f-106">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="dd61f-107">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="dd61f-107">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="dd61f-108">Ad esempio, se si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e si prova a usarlo con l'operatore `=` , il runtime genera <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un tipo di dati appropriato per il confronto di valori.</span><span class="sxs-lookup"><span data-stu-id="dd61f-108">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the `=` operator, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a data type suitable for value comparison.</span></span> <span data-ttu-id="dd61f-109">Anche se entrambi gli operandi restituiscono il tipo <xref:System.Windows.Forms.Form>, l'operazione non riesce perché `=` non è definito per gli operandi <xref:System.Windows.Forms.Form> .</span><span class="sxs-lookup"><span data-stu-id="dd61f-109">Even if both operands evaluate to type <xref:System.Windows.Forms.Form>, the operation fails because `=` is not defined for <xref:System.Windows.Forms.Form> operands.</span></span>  
   
- <span data-ttu-id="4d7d0-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="4d7d0-110">By default, this message is a warning.</span></span> <span data-ttu-id="4d7d0-111">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="4d7d0-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="dd61f-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="dd61f-110">By default, this message is a warning.</span></span> <span data-ttu-id="dd61f-111">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="dd61f-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="4d7d0-112">**ID errore:** BC42018</span><span class="sxs-lookup"><span data-stu-id="4d7d0-112">**Error ID:** BC42018</span></span>  
+ <span data-ttu-id="dd61f-112">**ID errore:** BC42018</span><span class="sxs-lookup"><span data-stu-id="dd61f-112">**Error ID:** BC42018</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4d7d0-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4d7d0-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dd61f-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dd61f-113">To correct this error</span></span>  
   
-- <span data-ttu-id="4d7d0-114">Se si vuole determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto, usare l'operatore `Is` o `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="4d7d0-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
+- <span data-ttu-id="dd61f-114">Se si vuole determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto, usare l'operatore `Is` o `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="dd61f-114">If you want to determine whether two object references refer to the same object instance, use the `Is` or `IsNot` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4d7d0-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4d7d0-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dd61f-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dd61f-115">See also</span></span>
 
-- [<span data-ttu-id="4d7d0-116">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4d7d0-116">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [<span data-ttu-id="4d7d0-117">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="4d7d0-117">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)
-- [<span data-ttu-id="4d7d0-118">Procedura: Determinare se due oggetti sono correlati</span><span class="sxs-lookup"><span data-stu-id="4d7d0-118">How to: Determine Whether Two Objects Are Related</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
-- [<span data-ttu-id="4d7d0-119">Procedura: Determinare se due oggetti sono identici</span><span class="sxs-lookup"><span data-stu-id="4d7d0-119">How to: Determine Whether Two Objects Are Identical</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
+- [<span data-ttu-id="dd61f-116">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dd61f-116">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="dd61f-117">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="dd61f-117">Is Operator</span></span>](../language-reference/operators/is-operator.md)
+- [<span data-ttu-id="dd61f-118">Procedura: determinare se due oggetti sono correlati</span><span class="sxs-lookup"><span data-stu-id="dd61f-118">How to: Determine Whether Two Objects Are Related</span></span>](../programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
+- [<span data-ttu-id="dd61f-119">Procedura: determinare se due oggetti sono identici</span><span class="sxs-lookup"><span data-stu-id="dd61f-119">How to: Determine Whether Two Objects Are Identical</span></span>](../programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
