--- a/docs/visual-basic/misc/bc42019.md
+++ b/docs/visual-basic/misc/bc42019.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operandi di tipo Object usati per l'operatore '<operatorsymbol>'; potrebbero verificarsi errori di runtime
+title: Operandi di tipo Object usati per l'operatore'<operatorsymbol>'. Potrebbero verificarsi errori di runtime
 ms.date: 07/20/2015
 f1_keywords:
 - BC42019
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC42019
 ms.assetid: f61944ba-863b-4a82-aae4-249bda52ec8d
-ms.openlocfilehash: ce6f50e837720424cdcf4cf7c5b9efdef64f832c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b0da48567e882b3f08422a3b4f037118e3e837fb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64751256"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84383884"
 ---
-# <a name="operands-of-type-object-used-for-operator-operatorsymbol-runtime-errors-could-occur"></a><span data-ttu-id="73f46-102">Gli operandi di tipo Object usati per l'operatore '\<simbolooperatore >'; potrebbero verificarsi errori di runtime</span><span class="sxs-lookup"><span data-stu-id="73f46-102">Operands of type Object used for operator '\<operatorsymbol>'; runtime errors could occur</span></span>
-<span data-ttu-id="73f46-103">Un'espressione usa un operatore in cui uno o entrambi gli operandi sono del [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="73f46-103">An expression uses an operator for which one or both operands are of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-runtime-errors-could-occur"></a><span data-ttu-id="2372b-102">Operandi di tipo Object usati per l'operatore'\<operatorsymbol>'. Potrebbero verificarsi errori di runtime</span><span class="sxs-lookup"><span data-stu-id="2372b-102">Operands of type Object used for operator '\<operatorsymbol>'; runtime errors could occur</span></span>
+<span data-ttu-id="2372b-103">Un'espressione usa un operatore in cui uno o entrambi gli operandi sono del [Object Data Type](../language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="2372b-103">An expression uses an operator for which one or both operands are of the [Object Data Type](../language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="73f46-104">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="73f46-104">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="73f46-105">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="73f46-105">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="73f46-106">Si supponga, ad esempio, di assegnare <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi di provare a usarla con l' [/ Operator (Visual Basic)](../../visual-basic/language-reference/operators/floating-point-division-operator.md).</span><span class="sxs-lookup"><span data-stu-id="73f46-106">For example, suppose you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the [/ Operator (Visual Basic)](../../visual-basic/language-reference/operators/floating-point-division-operator.md).</span></span> <span data-ttu-id="73f46-107">In questo caso il runtime genera un'eccezione <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.</span><span class="sxs-lookup"><span data-stu-id="73f46-107">If you do this, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a numeric value.</span></span>  
+ <span data-ttu-id="2372b-104">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="2372b-104">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="2372b-105">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="2372b-105">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="2372b-106">Si supponga, ad esempio, di assegnare <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi di provare a usarla con l' [/ Operator (Visual Basic)](../language-reference/operators/floating-point-division-operator.md).</span><span class="sxs-lookup"><span data-stu-id="2372b-106">For example, suppose you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to use it with the [/ Operator (Visual Basic)](../language-reference/operators/floating-point-division-operator.md).</span></span> <span data-ttu-id="2372b-107">In questo caso il runtime genera un'eccezione <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.</span><span class="sxs-lookup"><span data-stu-id="2372b-107">If you do this, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a numeric value.</span></span>  
   
- <span data-ttu-id="73f46-108">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="73f46-108">By default, this message is a warning.</span></span> <span data-ttu-id="73f46-109">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="73f46-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="2372b-108">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="2372b-108">By default, this message is a warning.</span></span> <span data-ttu-id="2372b-109">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="2372b-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="73f46-110">**ID errore:** BC42019</span><span class="sxs-lookup"><span data-stu-id="73f46-110">**Error ID:** BC42019</span></span>  
+ <span data-ttu-id="2372b-110">**ID errore:** BC42019</span><span class="sxs-lookup"><span data-stu-id="2372b-110">**Error ID:** BC42019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="73f46-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="73f46-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2372b-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2372b-111">To correct this error</span></span>  
   
-- <span data-ttu-id="73f46-112">Se possibile, organizzare gli operandi in modo che restituiscano i tipi di dati per cui è stato definito l'operatore.</span><span class="sxs-lookup"><span data-stu-id="73f46-112">If possible, arrange the operands to evaluate to data types for which the operator is defined.</span></span>  
+- <span data-ttu-id="2372b-112">Se possibile, organizzare gli operandi in modo che restituiscano i tipi di dati per cui è stato definito l'operatore.</span><span class="sxs-lookup"><span data-stu-id="2372b-112">If possible, arrange the operands to evaluate to data types for which the operator is defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="73f46-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="73f46-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2372b-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2372b-113">See also</span></span>
 
-- [<span data-ttu-id="73f46-114">Operatori aritmetici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="73f46-114">Arithmetic Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
+- [<span data-ttu-id="2372b-114">Operatori aritmetici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2372b-114">Arithmetic Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
