commit translated contents

--- a/docs/visual-basic/misc/bc30015.md
+++ b/docs/visual-basic/misc/bc30015.md
@@ -1,5 +1,5 @@
 ---
-title: Eredita da ' System. <classname>' non è valido
+title: Eredità da' System. <classname> ' non è valido
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30015
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30015
 ms.assetid: b4c005df-a510-47c7-b5cc-27f4514d32b6
-ms.openlocfilehash: 1ccfd4e380be83183e8e8ea2f9227691e8d4aeb5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b0dcb65e0a0eb4e06078ebcb70a732acdc30ec4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651871"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366827"
 ---
-# <a name="inheriting-from-systemclassname-is-not-valid"></a>Eredita da ' System. \<NomeClasse >' non è valido
+# <a name="inheriting-from-systemclassname-is-not-valid"></a>Eredità da' System. \<classname> ' non è valido
 Una classe non può derivare da `System.Array`, `System.Delegate`, `System.Enum`o `System.ValueType`.  
   
  **ID errore:** BC30015  
@@ -25,5 +25,5 @@ Una classe non può derivare da `System.Array`, `System.Delegate`, `System.Enum`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [Dichiarazione di variabili oggetto](../../visual-basic/programming-guide/language-features/variables/object-variable-declaration.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Dichiarazione di variabili oggetto](../programming-guide/language-features/variables/object-variable-declaration.md)
