--- a/docs/visual-basic/misc/bc30408.md
+++ b/docs/visual-basic/misc/bc30408.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo '<methodname>'non ha la stessa firma del delegato'<delegatename>'
+title: Il metodo ' <methodname> ' non ha la stessa firma del delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30408
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30408
 ms.assetid: 845f6686-388f-4253-b635-146e517015a1
-ms.openlocfilehash: cc1792ae32d04d86d71632be0626e3a936e300e7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1de0fe458acf64ef11b0121de4ae57643527978b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649847"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84362048"
 ---
-# <a name="method-methodname-does-not-have-the-same-signature-as-delegate-delegatename"></a>Metodo '\<NomeMetodo >' non ha la stessa firma del delegato '\<NomeDelegato >'
+# <a name="method-methodname-does-not-have-the-same-signature-as-delegate-delegatename"></a>Il metodo ' \<methodname> ' non ha la stessa firma del delegato ' \<delegatename> '
 Le firme del metodo e del delegato che si sta cercando di usare non corrispondono. L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata. Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato. Ogni classe delegata definisce un costruttore a cui viene passata la specifica di un metodo dell'oggetto.  
   
  **ID errore:** BC30408  
@@ -25,4 +25,4 @@ Le firme del metodo e del delegato che si sta cercando di usare non corrispondon
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
