--- a/docs/visual-basic/misc/bc30423.md
+++ b/docs/visual-basic/misc/bc30423.md
@@ -1,5 +1,5 @@
 ---
-title: I parametri facoltativi non possono essere dichiarati come tipo '<type>'
+title: I parametri facoltativi non possono essere dichiarati come tipo ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30423
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30423
 ms.assetid: 972dab8b-d91e-4a89-b822-2b8e4aadd25f
-ms.openlocfilehash: 3147a725d24a3e75b8995df20985bbe7deb594d3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ccf81c6a23992e88e1abdf22d4fd3f36ca4d19ef
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61931390"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361840"
 ---
-# <a name="optional-parameters-cannot-be-declared-as-the-type-type"></a>I parametri facoltativi non possono essere dichiarati come tipo '\<tipo >'
+# <a name="optional-parameters-cannot-be-declared-as-the-type-type"></a>I parametri facoltativi non possono essere dichiarati come tipo ' \<type> '
 I parametri facoltativi non possono essere del tipo di dati di una struttura.  
   
  **ID errore:** BC30423  
@@ -27,5 +27,5 @@ I parametri facoltativi non possono essere del tipo di dati di una struttura.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture e classi](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
-- [Funzione CType](../../visual-basic/language-reference/functions/ctype-function.md)
+- [Strutture e classi](../programming-guide/language-features/data-types/structures-and-classes.md)
+- [CType Function](../language-reference/functions/ctype-function.md)
