--- a/docs/visual-basic/misc/bc30757.md
+++ b/docs/visual-basic/misc/bc30757.md
@@ -1,5 +1,5 @@
 ---
-title: "' GoTo <labelname>' non è valido perché '<labelname>' si trova all'interno un 'For' o 'For Each' che non contiene questa istruzione"
+title: "'GoTo <labelname>' non è valida perché '<labelname>' si trova all'interno di un'istruzione 'For' o 'For Each' che non contiene questa istruzione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30757
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30757
 ms.assetid: be28bec5-1bc4-4da1-ba0c-4e3faac81077
-ms.openlocfilehash: 7334cbd502df6207d2f3e835c61587707b2c05d7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bd3a9bb5215bb7fdd642e338b8e59786a8631e93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657033"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361619"
 ---
-# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-for-or-for-each-statement-that-does-not-contain-this-statement"></a>' GoTo \<NomeEtichetta >' non è valido perché '\<NomeEtichetta >' si trova all'interno un 'For' o 'For Each' che non contiene questa istruzione
+# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-for-or-for-each-statement-that-does-not-contain-this-statement"></a>'GoTo \<labelname>' non è valida perché '\<labelname>' si trova all'interno di un'istruzione 'For' o 'For Each' che non contiene questa istruzione
 Le istruzioni`GoTo` sono limitate ai passaggi all'interno del blocco di codice corrente.  
   
  **ID errore:** BC30757  
@@ -25,5 +25,5 @@ Le istruzioni`GoTo` sono limitate ai passaggi all'interno del blocco di codice c
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione GoTo](../../visual-basic/language-reference/statements/goto-statement.md)
-- [Per... Istruzione Next (Visual Basic)](../language-reference/statements/for-next-statement.md)
+- [Istruzione GoTo](../language-reference/statements/goto-statement.md)
+- [Istruzione For...Next (Visual Basic)](../language-reference/statements/for-next-statement.md)
