--- a/docs/visual-basic/misc/bc30758.md
+++ b/docs/visual-basic/misc/bc30758.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30758
 ms.assetid: b72d1ff2-f6b2-4a89-9ac2-8765f77bcc97
-ms.openlocfilehash: 3dcd34c33c2e28efd5b45690cdca864debe98803
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f414719cc1fda4133f03419adc705354825bbee8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667063"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361593"
 ---
 # <a name="attribute-cannot-be-used-because-it-does-not-have-a-public-constructor"></a>Non è possibile usare l'attributo perché non ha un costruttore Public
 Il costruttore dell'attributo usato è `Private`e non può essere usato.  
@@ -26,4 +26,4 @@ Il costruttore dell'attributo usato è `Private`e non può essere usato.
 ## <a name="see-also"></a>Vedere anche
 
 - [Panoramica degli attributi](../programming-guide/concepts/attributes/index.md)
-- [Durata degli oggetti: Come vengono creati ed eliminati gli oggetti](../../visual-basic/programming-guide/language-features/objects-and-classes/object-lifetime-how-objects-are-created-and-destroyed.md)
+- [Durata degli oggetti: come creare e distruggere oggetti](../programming-guide/language-features/objects-and-classes/object-lifetime-how-objects-are-created-and-destroyed.md)
