--- a/docs/visual-basic/misc/bc30760.md
+++ b/docs/visual-basic/misc/bc30760.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30760
 ms.assetid: 7e792fd8-2880-402b-a908-c89e5b028300
-ms.openlocfilehash: e36e81a9ced0c69031d8810813a0cc0310df1611
-ms.sourcegitcommit: 68653db98c5ea7744fd438710248935f70020dfb
+ms.openlocfilehash: fce5dcd4070f22d73bc18d83821719de1d40769a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69933875"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361502"
 ---
 # <a name="referenced-object-has-a-value-of-nothing"></a>L'oggetto a cui si fa riferimento ha valore 'Nothing'
 L'oggetto usato ha valore `Nothing`, mentre è previsto un valore utilizzabile. `Nothing` indica che un oggetto non ha alcun valore. All'oggetto potrebbe non essere stato assegnato alcun valore o potrebbe essere stato assegnato il valore `Nothing`.  
@@ -30,4 +30,4 @@ L'oggetto usato ha valore `Nothing`, mentre è previsto un valore utilizzabile. 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nothing](../../visual-basic/language-reference/nothing.md)
+- [Nothing](../language-reference/nothing.md)
