--- a/docs/visual-basic/misc/bc30980.md
+++ b/docs/visual-basic/misc/bc30980.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre il tipo di ' <variablename>' da un'espressione contenente ' <variablename>'
+title: <variablename>Non è possibile dedurre il tipo di '' da un'espressione contenente ' <variablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30980
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30980
 ms.assetid: 43a5d008-5362-481b-845b-b9bb00a61a83
-ms.openlocfilehash: 415960a84e5dfdd977eff7a9368c721106ebf3a6
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: eedf01e1a29f5165f686893d6a73e4cbaf2a36d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352623"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399813"
 ---
-# <a name="type-of-variablename-cannot-be-inferred-from-an-expression-containing-variablename"></a>Non è possibile dedurre il tipo di ' \<variablename >' da un'espressione contenente ' \<variablename >'
+# <a name="type-of-variablename-cannot-be-inferred-from-an-expression-containing-variablename"></a>\<variablename>Non è possibile dedurre il tipo di '' da un'espressione contenente ' \<variablename> '
 Il compilatore non può dedurre il tipo di dati di una variabile se la variabile viene usata per stabilire il relativo valore iniziale nella dichiarazione.  
   
  Ad esempio, con `Option Infer` impostato su `On`, negli esempi seguenti non vengono compilati:  
@@ -55,8 +55,8 @@ Il compilatore non può dedurre il tipo di dati di una variabile se la variabile
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Istruzione For Each...Next](../../visual-basic/language-reference/statements/for-each-next-statement.md)
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Inferenza del tipo di variabile locale](../../visual-basic/programming-guide/language-features/variables/local-type-inference.md)
-- [Istruzione Option Infer](../../visual-basic/language-reference/statements/option-infer-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Istruzione For Each...Next](../language-reference/statements/for-each-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Inferenza del tipo di variabile locale](../programming-guide/language-features/variables/local-type-inference.md)
+- [Option Infer (istruzione)](../language-reference/statements/option-infer-statement.md)
