--- a/docs/visual-basic/misc/bc32045.md
+++ b/docs/visual-basic/misc/bc32045.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non dispone di alcun tipo di parametri, quindi non può avere argomenti tipo
+title: Il tipo '<typename>' non ha parametri di tipo, quindi non può avere argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32045
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32045
 ms.assetid: b86e784c-6718-4585-bd39-2f0982068828
-ms.openlocfilehash: af463dec83ed0792e6678e497157bff42f7467af
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b081eaf4722e7df8fee4197c5870b955650acba0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934992"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407288"
 ---
-# <a name="type-typename-has-no-type-parameters-and-so-cannot-have-type-arguments"></a>Tipo '\<nomeTipo >' non ha nessun tipo parametri, quindi non può avere argomenti tipo
-Quando viene richiamato un tipo non generico, una dichiarazione o un'istruzione di assegnazione include una clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) .  
+# <a name="type-typename-has-no-type-parameters-and-so-cannot-have-type-arguments"></a>Il tipo '\<typename>' non ha parametri di tipo, quindi non può avere argomenti di tipo
+Quando viene richiamato un tipo non generico, una dichiarazione o un'istruzione di assegnazione include una clausola [Of](../language-reference/statements/of-clause.md) .  
   
  Per definizione, un *tipo generic* o è una classe, struttura, interfaccia, routine o delegato che opera solo su tipi di dati che è possibile specificare tramite uno o più *parametri di tipo*. Quando il codice di utilizzo crea un tipo da questo tipo generico, fornisce a ogni parametro di tipo un *argomento di tipo* . Come parte della creazione del tipo, ogni argomento di tipo sostituisce ogni occorrenza del parametro di tipo corrispondente nel codice generato.  
   
@@ -33,6 +33,6 @@ Quando viene richiamato un tipo non generico, una dichiarazione o un'istruzione 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Procedura: Usare una classe generica](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Procedura: Usare una classe generica](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
