--- a/docs/visual-basic/misc/bc32046.md
+++ b/docs/visual-basic/misc/bc32046.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32046
 ms.assetid: 7ec6b52d-6fd5-47a0-b4a2-163bfd3dae35
-ms.openlocfilehash: 7e34c23fb0fab9b348cb81768760ab4117fe12e8
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d2fb552467a4ce3908dce121073a992770e5d493
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912817"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407275"
 ---
 # <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a>Impossibile utilizzare 'New' in un parametro di tipo che non ha un vincolo 'New'
-Un'istruzione di dichiarazione Usa una [nuovo operatore](../../visual-basic/language-reference/operators/new-operator.md) clausola che specifica un parametro di tipo come tipo di creazione e il parametro di tipo viene dichiarato senza un `New` vincolo.  
+Un'istruzione di dichiarazione usa una [nuova clausola operator](../language-reference/operators/new-operator.md) che specifica un parametro di tipo come tipo da creare e il parametro di tipo viene dichiarato senza un `New` vincolo.  
   
  Un *vincolo* su un parametro di tipo impone un requisito su qualsiasi argomento di tipo passato a tale parametro di tipo quando viene creato il tipo generico. Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere. Questo è ciò che consente a una clausola `New` in un'istruzione di dichiarazione per creare un'istanza di quel tipo.  
   
@@ -29,5 +29,5 @@ Un'istruzione di dichiarazione Usa una [nuovo operatore](../../visual-basic/lang
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
