--- a/docs/visual-basic/misc/bc36660-bc36657.md
+++ b/docs/visual-basic/misc/bc36660-bc36657.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di<methodname>tipo nel metodo '' perché non vengono convertiti nello stesso tipo
+title: Impossibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo '<methodname>' perché non vengono convertiti nello stesso tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36660
@@ -10,16 +10,16 @@ helpviewer_keywords:
 - BC36660
 - BC36657
 ms.assetid: e80c5afd-e16d-4f03-bdf1-c79c4286114b
-ms.openlocfilehash: f353b2be10e22a2074e0b8f747851462db6bad9f
-ms.sourcegitcommit: f20dd18dbcf2275513281f5d9ad7ece6a62644b4
+ms.openlocfilehash: 46b3fa33f1ea14389d407e221a3481973f3a3dc7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/30/2019
-ms.locfileid: "68631020"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398630"
 ---
-# <a name="data-types-of-the-type-parameters-in-method-methodname-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a>Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di\<tipo nel metodo ' methodName >' perché non vengono convertiti nello stesso tipo
+# <a name="data-types-of-the-type-parameters-in-method-methodname-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a>Impossibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo '\<methodname>' perché non vengono convertiti nello stesso tipo
 
-Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di\<tipo nel metodo ' methodName >' perché non vengono convertiti nello stesso tipo. Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.
+Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo ' \<methodname> ' perché non vengono convertiti nello stesso tipo. Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.
 
 Si è provato a usare l'inferenza del tipo per determinare il tipo o i tipi di dati del parametro o dei parametri di tipo durante la valutazione di una chiamata a una routine generica. Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti. Di conseguenza, ha segnalato questo errore.
 
@@ -62,7 +62,7 @@ End Module
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
-- [Conversioni implicite ed esplicite](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
+- [Conversioni implicite ed esplicite](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
