--- a/docs/visual-basic/misc/bc40050.md
+++ b/docs/visual-basic/misc/bc40050.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo delegato '<delegatename>'dell'evento'<eventname>' non è conforme a CLS
+title: Il tipo delegato '<delegatename>' dell'evento '<eventname>' non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40050
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC40050
 ms.assetid: 92f5be26-9a82-46d4-bf97-005f2c7ca424
-ms.openlocfilehash: bc9dd8798726961061565f20141a5f0c7533e704
-ms.sourcegitcommit: 8699383914c24a0df033393f55db3369db728a7b
+ms.openlocfilehash: 15d8de3c91b4d5409b346c9952b5a6a51fc65e01
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/15/2019
-ms.locfileid: "65640644"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400952"
 ---
-# <a name="delegate-type-delegatename-of-event-eventname-is-not-cls-compliant"></a>Tipo delegato '\<NomeDelegato >' dell'evento '\<NomeEvento >' non è conforme a CLS
-Un' [Event Statement](../../visual-basic/language-reference/statements/event-statement.md) usa un delegato per specificare la sua firma, ma l' [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.  
+# <a name="delegate-type-delegatename-of-event-eventname-is-not-cls-compliant"></a>Il tipo delegato '\<delegatename>' dell'evento '\<eventname>' non è conforme a CLS
+Un' [Event Statement](../language-reference/statements/event-statement.md) usa un delegato per specificare la sua firma, ma l' [Delegate Statement](../language-reference/statements/delegate-statement.md) è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.  
   
  Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità. L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.  
   
