--- a/docs/visual-basic/misc/bc42317.md
+++ b/docs/visual-basic/misc/bc42317.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo del commento XML <parameter> non corrisponde a un parametro di tipo corrispondente <keyword> istruzione
+title: Il parametro di tipo <parameter> del commento XML non corrisponde a un parametro di tipo nell'istruzione <keyword> corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42317
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42317
 ms.assetid: 53b5425d-2f73-4488-b90b-adb1835307c9
-ms.openlocfilehash: 549f3cced0df62ef93ee016fc3581370617926a5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9c4e2ed2e85177534d0eaa37e6544075a9632d8f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604318"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400939"
 ---
-# <a name="xml-comment-type-parameter-parameter-does-not-match-a-type-parameter-on-the-corresponding-keyword-statement"></a>Parametro di tipo del commento XML \<parametro > non corrisponde a un parametro di tipo corrispondente \<parola chiave > istruzione
-Il parametro del commento XML \<parametro > non corrisponde a un parametro di tipo corrispondente \<parola chiave > istruzione. Il commento XML verrà ignorato.  
+# <a name="xml-comment-type-parameter-parameter-does-not-match-a-type-parameter-on-the-corresponding-keyword-statement"></a>Il parametro di tipo \<parameter> del commento XML non corrisponde a un parametro di tipo nell'istruzione \<keyword> corrispondente
+Il parametro del commento XML non \<parameter> corrisponde a un parametro di tipo nell' \<keyword> istruzione corrispondente. Il commento XML verrà ignorato.  
   
  Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri di tipi in un metodo.  
   
@@ -27,5 +27,5 @@ Il parametro del commento XML \<parametro > non corrisponde a un parametro di ti
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
