--- a/docs/visual-basic/misc/bc2033.md
+++ b/docs/visual-basic/misc/bc2033.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC2033
 ms.assetid: e921b34a-1ab3-4ba0-81b3-e45c62de4718
-ms.openlocfilehash: 9f8e748245e2ac6b8d67ea8915c95bba8e3b6649
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: aa1b249529f8815e5e52f7abf95c3d4973c080c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775381"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401316"
 ---
 # <a name="error-embedding-win32-manifest-option-win32manifest-conflicts-with-nowin32manifest"></a>Si è verificato un errore durante l'incorporamento del manifesto Win32: l'opzione /win32manifest è in conflitto con /nowin32manifest
 Al compilatore Visual Basic è stata passata un'opzione `/win32manifest` del compilatore e un'opzione `/nowin32manifest` del compilatore. Solo una di queste opzioni può essere passata al compilatore di Visual Basic.  
@@ -25,6 +25,6 @@ Al compilatore Visual Basic è stata passata un'opzione `/win32manifest` del com
   
 ## <a name="see-also"></a>Vedere anche
 
-- [-win32manifest (Visual Basic)](../../visual-basic/reference/command-line-compiler/win32manifest.md)
-- [-nowin32manifest (Visual Basic)](../../visual-basic/reference/command-line-compiler/nowin32manifest.md)
-- [Compilatore della riga di comando di Visual Basic](../../visual-basic/reference/command-line-compiler/index.md)
+- [-win32manifest (Visual Basic)](../reference/command-line-compiler/win32manifest.md)
+- [-nowin32manifest (Visual Basic)](../reference/command-line-compiler/nowin32manifest.md)
+- [Compilatore della riga di comando di Visual Basic](../reference/command-line-compiler/index.md)
