--- a/docs/visual-basic/misc/bc30111.md
+++ b/docs/visual-basic/misc/bc30111.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo di interfaccia e non può essere usato come espressione"
+title: "' <typename> ' è un tipo di interfaccia e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30111
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30111
 ms.assetid: 94b9cc47-11bc-4b88-b379-6cf0a3660777
-ms.openlocfilehash: 9e8432af533700d86291c4d2183b922372324ffc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99f0b65655fb1d2505a78429d2c5d9e3a7ff1670
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642643"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400008"
 ---
-# <a name="typename-is-an-interface-type-and-cannot-be-used-as-an-expression"></a>'\<nomeTipo >' è un tipo di interfaccia e non può essere usato come espressione
+# <a name="typename-is-an-interface-type-and-cannot-be-used-as-an-expression"></a>' \<typename> ' è un tipo di interfaccia e non può essere usato come espressione
 Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione. Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .  
   
  **ID errore:** BC30111  
@@ -25,4 +25,4 @@ Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori ed espressioni](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [Operatori ed espressioni](../programming-guide/language-features/operators-and-expressions/index.md)
