--- a/docs/visual-basic/misc/bc30413.md
+++ b/docs/visual-basic/misc/bc30413.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30413
 ms.assetid: 11ddf207-2760-425f-b4c2-bb9fe6da36ea
-ms.openlocfilehash: 9b7245383e8b10cbd33cfcbffc54d91012792475
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 7ff12b635a182455175e872cba6d2428cb2c2b45
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69665123"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361983"
 ---
 # <a name="withevents-variables-can-only-be-typed-as-classes-interfaces-or-type-parameters-with-class-constraints"></a>È possibile tipizzare le variabili 'WithEvents' solo come classi, interfacce o parametri di tipo con vincoli di classe
 È stata dichiarata una variabile tipizzata come una struttura in combinazione con `WithEvents`e questa operazione non costituisce un uso valido del modificatore `WithEvents` .  
@@ -26,5 +26,5 @@ ms.locfileid: "69665123"
 ## <a name="see-also"></a>Vedere anche
 
 - [WithEvents e clausola Handles](../programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Istruzione AddHandler](../../visual-basic/language-reference/statements/addhandler-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
