--- a/docs/visual-basic/misc/bc30429.md
+++ b/docs/visual-basic/misc/bc30429.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30429
 ms.assetid: cf9d0cfe-5dfa-4f6d-9d10-69eb16e413e1
-ms.openlocfilehash: 6b48c5b466fe09c5ff3b58be9d95d72f96974137
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ec6dae91feb485f7240d6ccfe02a430829e31642
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64617094"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396168"
 ---
 # <a name="end-sub-must-be-preceded-by-a-matching-sub"></a>'End Sub' deve essere preceduto da un 'Sub' corrispondente
 Un'istruzione `End Sub` viene visualizzata nel codice senza una definizione della routine `Sub` corrispondente che la preceda.  
@@ -29,5 +29,5 @@ Un'istruzione `End Sub` viene visualizzata nel codice senza una definizione dell
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
