--- a/docs/visual-basic/misc/bc30467.md
+++ b/docs/visual-basic/misc/bc30467.md
@@ -1,5 +1,5 @@
 ---
-title: «<name1>'per le importazioni'<name2>' non fa riferimento a un Namespace, classe, struttura, Enum o modulo
+title: "' <name1> ' per le importazioni ' <name2> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'enumerazione o un modulo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30467
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30467
 ms.assetid: a4b8a23b-ba1b-44f7-9584-258dd2607581
-ms.openlocfilehash: 18b160b9a5b5f1c1dea133ee040f52ff50f8cd22
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f5d9e36027959ae44f98876ac124bdd87a863d5e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588369"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396051"
 ---
-# <a name="name1-for-the-imports-name2-does-not-refer-to-a-namespace-class-structure-enum-or-module"></a>«\<name1 >' per le importazioni\<nome2 >' non fa riferimento a un Namespace, classe, struttura, Enum o modulo
+# <a name="name1-for-the-imports-name2-does-not-refer-to-a-namespace-class-structure-enum-or-module"></a>' \<name1> ' per le importazioni ' \<name2> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'enumerazione o un modulo
 Si è provato a usare l'istruzione `Imports` in un elemento diverso da `Namespace`, `Class`, `Structure`, `Enum`o `Module`. L'istruzione `Imports` importa i nomi degli spazi dei nomi da progetti e assembly di riferimento oppure importa i nomi degli spazi dei nomi definiti all'interno dello stesso progetto in cui compare.  
   
  **ID errore:** BC30467  
@@ -25,5 +25,5 @@ Si è provato a usare l'istruzione `Imports` in un elemento diverso da `Namespac
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [Riferimenti e istruzione Imports](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Riferimenti e istruzione Imports](../programming-guide/program-structure/references-and-the-imports-statement.md)
