--- a/docs/visual-basic/misc/bc30762.md
+++ b/docs/visual-basic/misc/bc30762.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30762
 ms.assetid: b433014d-8422-46e8-ad55-321146a48186
-ms.openlocfilehash: cb0ef884dfdb437332cb78b44de1ce462f617038
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: bd7ebb469d61b916185f3d7d374691776cfacc5a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61755558"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361426"
 ---
 # <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-latebinding"></a>La versione di destinazione di .NET Compact Framework non supporta l'associazione tardiva
 La versione di .NET Compact Framework che si sta usando non supporta l'associazione tardiva.  
@@ -29,4 +29,4 @@ La versione di .NET Compact Framework che si sta usando non supporta l'associazi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Caratteri speciali nel codice](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
+- [Caratteri speciali nel codice](../programming-guide/program-structure/special-characters-in-code.md)
