--- a/docs/visual-basic/misc/bc30780.md
+++ b/docs/visual-basic/misc/bc30780.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30780
 ms.assetid: 91f3b390-1180-415f-90e1-49c9547a00bd
-ms.openlocfilehash: 2731b41e9c4932f58ea6a72b6cbd7c71d237feb6
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 6405342097b6badc4ad90ba627b5823f38c2d8c0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197507"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361436"
 ---
 # <a name="continue-statements-are-not-valid-in-the-immediate-window"></a>Le istruzioni 'Continue' non sono valide nella finestra di controllo immediato
 Le istruzioni ' continue ' possono essere usate solo nel codice sorgente.  
@@ -25,6 +25,6 @@ Le istruzioni ' continue ' possono essere usate solo nel codice sorgente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Continue](../../visual-basic/language-reference/statements/continue-statement.md)
+- [Istruzione continue](../language-reference/statements/continue-statement.md)
 - [Finestra di controllo immediato](/visualstudio/ide/reference/immediate-window)
 - [Debug in Visual Studio](/visualstudio/debugger/debugger-feature-tour)
