--- a/docs/visual-basic/misc/bc30985.md
+++ b/docs/visual-basic/misc/bc30985.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30985
 ms.assetid: 4cb543e1-477c-429c-82df-541ebff08543
-ms.openlocfilehash: 9cff84366aee74c04f843ca9ba35a7acd6a27280
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 9cbeb364c35cb5dcc421527b7323573656f57bba
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352548"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399761"
 ---
 # <a name="name-of-field-or-property-being-initialized-must-start-with-"></a>Il nome di un campo o di una proprietà inizializzato in un inizializzatore di oggetti deve iniziare con '.'
 Ogni membro inizializzato da un elenco di inizializzatori di oggetti specifica il nome di un campo o di una proprietà e il relativo valore iniziale. Il nome del campo o della proprietà deve essere preceduto da un punto. Ad esempio, la dichiarazione seguente assegna "Microsoft" come valore iniziale per la proprietà `Name` di `client`.  
@@ -29,4 +29,4 @@ Dim client As New Customer() With { .Name = "Microsoft" }
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Inizializzatori di oggetto: tipi denominati e tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
+- [Inizializzatori di oggetto: tipi denominati e tipi anonimi](../programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
