--- a/docs/visual-basic/misc/bc31178.md
+++ b/docs/visual-basic/misc/bc31178.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31178
 ms.assetid: bacb4bb2-1107-4f10-83f3-6b05fd37fd80
-ms.openlocfilehash: 6dd3d1ef477fbe0207fbc3979e5d9a8bbcaf4125
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2391c809d2da68fc2b18612bf6c2eedc78e5b1e7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665570"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401030"
 ---
 # <a name="expected-closing--for-xml-entity"></a>Previsto ';' di chiusura per l'entità XML
 In un riferimento a entità XML (ad esempio, `>`) manca un punto e virgola di chiusura (;).  
@@ -25,6 +25,6 @@ In un riferimento a entità XML (ad esempio, `>`) manca un punto e virgola di ch
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML e specifica XML 1.0](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML e specifica XML 1.0](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
