--- a/docs/visual-basic/misc/bc32099.md
+++ b/docs/visual-basic/misc/bc32099.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32099
 ms.assetid: 8ab77752-3b65-48ef-abd1-09cfc0ccb63b
-ms.openlocfilehash: e4cecebcabd92472dddff6a4519eb41e9377a726
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7737b799b70ff92f38d714ebcf7a0c745a5bed17
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618490"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365267"
 ---
 # <a name="comma-or--expected-type-parameter-list"></a>Prevista virgola o ')' (elenco dei parametri di tipo)
 Un elenco di parametri di tipo contiene un elemento imprevisto. Usare le virgole (`,`) per separare i parametri di tipo in un elenco di questo genere e usare una parentesi di chiusura (`)`) per concludere l'elenco.  
@@ -25,5 +25,5 @@ Un elenco di parametri di tipo contiene un elemento imprevisto. Usare le virgole
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
