--- a/docs/visual-basic/misc/bc36639.md
+++ b/docs/visual-basic/misc/bc36639.md
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36639
 ms.assetid: 5913f9b6-2929-4c05-8dd1-00b10fcd5a83
-ms.openlocfilehash: 2bd5fd4fe738562d5607587759d9854e6a26ac87
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 4603ac7a4b911f8aa32b7af086f08763e3c5e7b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266755"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398760"
 ---
-# <a name="byref-parameter-parametername-cannot-be-used-in-a-lambda-expression"></a>Impossibile utilizzare il\<parametro 'ByRef' ' nomeparametro>' in un'espressione lambda'ByRef' parameter ' parametername>' cannot be used in a lambda expression
+# <a name="byref-parameter-parametername-cannot-be-used-in-a-lambda-expression"></a>Impossibile usare il parametro 'ByRef' '\<parametername>' in un'espressione lambda
 Un'espressione lambda dichiarata all'interno di `Sub` o di una funzione non può usare alcun parametro `ByRef` di quella funzione `Sub` . Ad esempio, il codice seguente causerà questo errore perché l'espressione lambda usa il parametro `ByRef``n` .  
   
 ```vb  
@@ -43,4 +43,4 @@ Un'espressione lambda dichiarata all'interno di `Sub` o di una funzione non può
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Espressioni lambdaLambda Expressions](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
